funcionalidad del botón editar aviso

--- a/src/app/pages/avisos/ABM/abm-avisos.component.html
+++ b/src/app/pages/avisos/ABM/abm-avisos.component.html
@@ -8,7 +8,7 @@
     </div>
      <div *ngIf="loaded">
         <div class ="row">
-            {{data.avisoInfo.titulo}}
+            {{data.content.nombre}}
         </div>
     </div> <!--loaded-->
 </section>
