--- a/src/app/pages/avisos/ABM/abm-avisos.component.html
+++ b/src/app/pages/avisos/ABM/abm-avisos.component.html
@@ -9,7 +9,14 @@
      <div *ngIf="loaded">
         <form #avisosForm="ngForm" (ngSubmit)="onSubmit(avisosForm.value)" class ="form-group">
             <div  class="form-group">{{id}} </div> 
-            <div  class="form-group">{{data.nombre}}</div> 
+
+            <div  class="form-group">
+                <label for="cuerpoInput"> Modificar Título </label> 
+                <input type="text"
+                    id="nombreInput"
+                    name="nombreInput" [(ngModel)]='data.nombre'>
+            </div> 
+            <div  class="form-group">{{data.nombre}}</div>
 
             <div  class="form-group">
                 <label for="cuerpoInput"> Modificar Cuerpo </label> 
