--- a/src/app/pages/avisos/ABM/abm-avisos.component.html
+++ b/src/app/pages/avisos/ABM/abm-avisos.component.html
@@ -8,7 +8,7 @@
     </div>
      <div *ngIf="loaded">
         <form #avisosForm="ngForm" (ngSubmit)="onSubmit(avisosForm.value)" class ="form-group">
-            <div  class="form-group">{{id}} </div> 
+            <div  class="form-group">id: {{id}} </div> 
 
             <div  class="form-group">
                 <label for="cuerpoInput"> Modificar Título </label> 
@@ -17,7 +17,6 @@
                     name="nombreInput" [(ngModel)]='data.nombre'>
             </div> 
             <div  class="form-group">{{data.nombre}}</div>
-
             <div  class="form-group">
                 <label for="cuerpoInput"> Modificar Cuerpo </label> 
                 <input type="text"
@@ -25,6 +24,20 @@
                     name="cuerpoInput" [(ngModel)]='data.cuerpo'>
             </div> 
             <div  class="form-group">{{data.cuerpo}}</div>
+            <div  class="form-group">
+                <label for="fechaAlta"> Fecha de Alta </label> 
+                <input type="date"
+                    id="fechaAlta"
+                    name="fechaAlta" [(ngModel)]='data.fechaAlta'>
+            </div> 
+            <div  class="form-group">{{data.fechaAlta}}</div>
+            <div  class="form-group">
+                <label for="fechaBaja"> Fecha de Vencimiento </label> 
+                <input type="date"
+                    id="fechaBaja"
+                    name="fechaBaja" [(ngModel)]='data.fechaBaja'>
+            </div> 
+            <div  class="form-group">{{data.fechaBaja}}</div>
             <button type="ngSubmit" class="btn btn-primary">Enviar</button>
         </form>
         {{avisosForm.value | json}}
