arreglo tabla de informacón enviada

--- a/src/app/pages/avisos/ABM/alta-avisos.component.html
+++ b/src/app/pages/avisos/ABM/alta-avisos.component.html
@@ -40,7 +40,7 @@
             <div  class="form-group">
                 <label for="fechaBaja"> Fecha de Vencimiento </label> 
                 <input type="date" class="form-control"
-                    id="fechaBaja"
+                    id="fechaBaja" required
                     name="fechaBaja" [(ngModel)]='data.fechaBaja'>
             </div> 
             <button type="ngSubmit" [disabled]="altaAvisosForm.invalid" class="btn btn-primary">Enviar</button>
@@ -50,22 +50,23 @@
 
 <div [hidden]="!submitted">
   <h2>Información enviada:</h2>
+<div class="container">
   <div class="row">
-    <div class="col-xs-3">Titulo</div>
-    <div class="col-xs-9">{{ data.nombre }}</div>
+    <div class="col-sm-3">Titulo</div>
+    <div class="col-sm-9">{{ data.nombre }}</div>
   </div>
   <div class="row">
-    <div class="col-xs-3">Cuerpo</div>
-    <div class="col-xs-9">{{ data.cuerpo }}</div>
+    <div class="col-sm-3">Cuerpo</div>
+    <div class="col-sm-9">{{ data.cuerpo }}</div>
   </div>
   <div class="row">
-    <div class="col-xs-3">Fecha de vencimiento</div>
-    <div class="col-xs-9">{{ data.fechaBaja }}</div>
+    <div class="col-sm-3">Fecha de vencimiento</div>
+    <div class="col-sm-9">{{ data.fechaBaja }}</div>
   </div>
+</div> <!-- container -->
   <br>
   <button class="btn btn-primary" (click)="submitted=false">Edit</button>
 </div>
-
 </div> <!--loaded-->
 
 
