--- a/src/app/pages/avisos/listado/listado-avisos.component.html
+++ b/src/app/pages/avisos/listado/listado-avisos.component.html
@@ -42,7 +42,7 @@
         <div class ="row">
 
         </div>
-        <button class="btn btn-primary" (click)="nuevoAviso()">Nuevo Aviso</button>
+        <button class="btn btn-primary btn-nuevo-aviso" (click)="nuevoAviso()">Nuevo Aviso</button>
     </div> <!--loaded-->
 <!--DataTable With Editing Feature Ends-->
 </section>
