--- a/src/app/pages/avisos/ABM/alta-avisos.component.html
+++ b/src/app/pages/avisos/ABM/alta-avisos.component.html
@@ -31,18 +31,32 @@
                     Campo Requerido
                 </div>
             </div> 
+
             <div  class="form-group">
                 <label for="fechaAlta"> Fecha de Alta </label> 
-                <input type="date" class="form-control"
-                    id="fechaAlta"
-                    name="fechaAlta" [(ngModel)]='data.fechaAlta'>
-            </div> 
+                <div class="input-group">
+                    <input class="form-control" placeholder="dd-mm-aaaa" 
+                        name="fechaAlta" [(ngModel)]="data.fechaAlta" ngbDatepicker #d1="ngbDatepicker">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary calendar" (click)="d1.toggle()" type="button">
+                            <i class="fa fa-calendar-o" style="color: blue"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
             <div  class="form-group">
                 <label for="fechaBaja"> Fecha de Vencimiento </label> 
-                <input type="date" class="form-control"
-                    id="fechaBaja" required
-                    name="fechaBaja" [(ngModel)]='data.fechaBaja'>
-            </div> 
+                <div class="input-group">
+                    <input class="form-control" placeholder="dd-mm-aaaa" 
+                        name="fechaBaja" [(ngModel)]="data.fechaBaja" ngbDatepicker #d2="ngbDatepicker">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary calendar" (click)="d2.toggle()" type="button">
+                            <i class="fa fa-calendar-o" style="color: blue"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
             <button type="ngSubmit" [disabled]="altaAvisosForm.invalid" class="btn btn-primary">Enviar</button>
         </form>
         {{altaAvisosForm.value | json}}
@@ -68,7 +82,6 @@
   <button class="btn btn-primary" (click)="submitted=false">Edit</button>
 </div>
 </div> <!--loaded-->
-
 
 <!--/section-->
 </div> <!-- container -->
