--- a/src/app/pages/guia-judicial/integrantes/integrantes.component.html
+++ b/src/app/pages/guia-judicial/integrantes/integrantes.component.html
@@ -34,8 +34,11 @@
                             <button md-icon-button (click)="edit(row)">
                                     <i class="fa fa-edit" style="color: blue"></i>
                             </button>
+                            <button md-icon-button (click)="edit(row)">
+                                    <i class="fa fa-arrow-circle-down" style="color: blue"></i>
+                            </button>
                             <button md-icon-button (click)="user(row)">
-                                    <i class="fa fa-user" style="color: blue"></i>
+                                    <i class="fa fa-arrow-circle-up" style="color: blue"></i>
                             </button>
 
                         </ng-template>
